Align h1 text, fix .container padding, fix experience card margin. All fixes for mobile screen width (#2)

--- a/styles/ExperienceCard.module.css
+++ b/styles/ExperienceCard.module.css
@@ -320,7 +320,7 @@
   
   .direction-l .desc,
   .direction-r .desc {
-      margin: 1em 4em 0 4em;
+      margin: 1em 0px;
   }
   
   }
